--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@iconify/vue": "^3.2.1",
     "@vitejs/plugin-vue": "^2.3.1",
     "autoprefixer": "^10.4.7",
+    "gh-pages": "^4.0.0",
     "postcss": "^8.4.13",
     "tailwindcss": "^3.0.24",
     "vite": "^2.9.5"
